syntax = "proto3";

package ai.lzy.v1.channel.v2;

import "ai/lzy/v1/long-running/operation.proto";
import "ai/lzy/v1/long-running/option.proto";
import "ai/lzy/v1/common/channel.proto";
import "ai/lzy/v1/common/data-scheme.proto";

option java_outer_classname = "LCMS";
option java_package = "ai.lzy.v1.channel.v2";

service LzyChannelManager {

  rpc Bind (BindRequest) returns (ai.lzy.v1.longrunning.Operation) {
    option (ai.lzy.v1.operation) = {
      response: "BindResponse"
      metadata: "BindMetadata"
    };
  }

  rpc Unbind (UnbindRequest) returns (ai.lzy.v1.longrunning.Operation) {
    option (ai.lzy.v1.operation) = {
      response: "UnbindResponse"
      metadata: "UnbindMetadata"
    };
  }

  rpc ConnectionCompleted (ConnectionCompletedRequest) returns (ConnectionCompletedResponse);

  rpc GetChannelsStatus (GetChannelsStatusRequest) returns (GetChannelsStatusResponse);

}

// =========== Bind ==============

message BindRequest {
  string execution_id = 1;
  string channel_id   = 2;   // Id of channel to bind to

  string peer_id      = 3;
  string peer_url     = 4;   // URL of slots api to connect to
  Role role           = 5;

  enum Role {
    UNSPECIFIED = 0;
    CONSUMER = 1;
    PRODUCER = 2;
  }
}

message BindResponse {
  // Data scheme of channel. Data of slot can be validated with this scheme
  common.DataScheme data_scheme                   = 1;

  /* optional */common.PeerDescription connect_to = 2;  // If not set, peer must wait for connect call
}

message BindMetadata {}

// =========== Unbind ==============

message UnbindRequest {
  string peer_id = 1;
}

message UnbindResponse {}

message UnbindMetadata {}

// =========== GetChannelsStatus ==============

message GetChannelsStatusRequest {
  string execution_id = 1;
  repeated string channel_ids = 2;
}

message GetChannelsStatusResponse {
  repeated common.ChannelStatus channels = 1;
}

// =========== ConnectionCompleted ==============

message ConnectionCompletedRequest {
  string peer_id        = 1;
  string target_peer_id = 2;

  oneof status {
    Succeeded succeeded = 3;
    Failed failed       = 4;
  }

  message Failed {
    string description = 1;  // Error description for logging
  }

  message Succeeded {}
}

message ConnectionCompletedResponse {

  // Set if previous connection was in failed state and there are other available peers
  /* optional */ common.PeerDescription connect_to = 1;
}


